# kyb

./: .gitignore  Cargo.toml  README.MD  ask.sh  rebuild.sh  repomix-output.xml  sample.csv
release/: client.js  index.html
src/: company.rs  config.rs  db.rs  error.rs  latvia.rs  main.rs  public_institution.rs  server.rs  tasks.rs  vat.rs  verify.rs
src/company/: clean_name.rs  company.csv  company.rs  create_company_table.rs  create_test_db.rs  get_first_result.rs  get_new_company_data.rs  import.rs  input_company.rs  parse_address.rs  search.rs  search_map_results.rs
src/company/log/: create_table.rs  log.rs
src/db/: app_folder.rs  create_db.rs  create_home_dir.rs  create_table.rs  db_file.rs  get_db.rs  get_new_data.rs  log.rs  query.rs  respond_lv.rs
src/latvia/: board.rs  company.rs  government.rs
src/latvia/board/: get_new_data.rs  log.rs  query.rs
src/public_institution/: get_new_data.rs  import.rs  parse_address.rs  ppi_public_persons_institutions.csv  public_institution.rs
src/server/: api_test.rs  lv_board_respond.rs  lv_company_search.rs  lv_company_search_air.rs  server.rs
src/tasks/: cli.rs  create_test_db.rs  handle_lv.rs  import_new_data.rs  lv_board_handle.rs  lv_board_respond.rs  lv_company_search.rs  lv_company_search_air.rs  lv_company_search_handle.rs  lv_handle.rs  lv_respond.rs  one_lv_air_message.rs  schedule.rs  schedule_task.rs  server.rs  start.rs
src/vat/: get_new_data.rs  import.rs  read_sample_data.rs  vat.csv  vat.rs  vat_status.rs
src/verify/: is_board_member.rs  setup_test_db.rs  validate.rs  validate_and_verify.rs
(+39 files in other folders)
