[package]
name = "kyb"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
csv = "1.3.1"
reqwest = "0.12.22"
rusqlite = "0.37.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
actix-rt = "2.10.0"
dirs = "6.0.0"
thiserror = "2.0.12"
actix-ws = "0.3.0"
futures-util = "0.3.31"
