[package]
name = "kyb"
version = "1.0.2"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
csv = "1.3.1"
reqwest = "0.12.22"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
actix-rt = "2.10.0"
dirs = "6.0.0"
thiserror = "2.0.12"
actix-ws = "0.3.0"
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
