[package]
name = "kyb"
version = "1.0.2"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = "0.4.43"
csv = "1.3.1"
reqwest = "0.13.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
actix-rt = "2.11.0"
dirs = "6.0.0"
thiserror = "2.0.12"
actix-ws = "0.3.1"
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"
r2d2_sqlite = "0.32.0"
r2d2 = "0.8.10"
